<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Labels -->
    <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <string name="descr_image">Image</string>
    <string name="app_name">Youflik</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">1528314940746978</string>
    <string name="string_signup_title">Join Youflik</string>
    <string name="string_signup_fullname">Full name</string>
    <string name="string_signup_gender">Gender</string>
    <string name="string_signup_username">Username</string>
    <string name="string_signup_password">Password</string>
    <string name="string_signup_email">Email</string>
    <string name="string_signup_dob">Date of Birth</string>
    <string name="string_signup_month">Month</string>
    <string name="string_signup_day">Day</string>
    <string name="string_signup_year">Year</string>
    <string name="string_signup_join">Join</string>
    <string name="string_signup_lastname">Lastname</string>
    <string name="string_signup_firstname">Firstname</string>
    <string name="string_signup_terms">I agree to the Terms of Use Agreement and Privacy Policy </string>
    <string name="crouton_message">Connection Error! Please check your internet connection</string>
    <string name="crouton_message_status_update_no_text">Oops you forgot to add a post!</string>
    <string name="crouton_gallery_photo">No Photos Found !</string>
    <string name="crouton_gallery_video">No Videos Found !</string>
    <string name="crouton_message_twitter">Twitter oAuth tokens,Please set your twitter oauth tokens first!</string>
    <string name="crouton_message_twitter_info">Already Logged into twitter!</string>
    <string name="crouton_message_fillall">Please enter all the details !</string>
    <string name="crouton_message_passwordIncorrect">Incorrect username or password!</string>
    <string name="crouton_message_serverError">Server Error !</string>
    <string name="crouton_message_serverGatewayError"> Server Gateway Time Out !</string>
    <string name="crouton_message_auth"> UnAuthorized !</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="crouton_message_friend_request">No Friend Request For You</string>
    <string name="crouton_message_notification">No Notifications For You</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Search</item>
        <item>TimeFeed</item>
        <item>Notification</item>
        <item>Messages</item>
        <item>DISCOVER</item>
        <item>Settings</item>
        <item>OTHER</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_search</item>
        <item>@drawable/ic_timefeed</item>
        <item>@drawable/ic_notification</item>
        <item>@drawable/ic_messages</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_settings</item>
    </array>
    <!-- strings for Youflik settings.xml -->
    <string name="string_settings_general">GENERAL</string>
    <string name="string_settings_notifications">Notifications</string>
    <string name="string_settings_change_email">Change Email</string>
    <string name="string_settings_change_password">Change Password</string>
    <string name="string_settings_language">LANGUAGE</string>
    <string name="string_settings_support">SUPPORT</string>
    <string name="string_settings_privacy_policy">Privacy Policy</string>
    <string name="string_settings_terms">Terms of Service</string>
    <string name="string_settings_about">About</string>
    <string name="members_add">Add</string>
    <string name="members_exit">Exit</string>

    <!-- strings for Youflik fragment_settings_notifications.xml -->
    <string name="string_settings_notifications_disable">Disable email notifications</string>
    <string name="string_settings_notifications_whocanaddthings">Who can add things to my timeline</string>
    <string name="string_settings_notifications_whocansendmemessage">Who can send me a message</string>
    <string name="string_settings_notifications_onlysecurity_email">Only security email notifications</string>
    <string name="string_settings_notifications_onlymessage_email">Only message email notifications</string>
    <string name="string_settings_notifications_only_friendrequest_email">Only friend request email notifications</string>
    <string name="string_settings_notifications_postwall_email">Post on my wall email notifications</string>
    <string name="string_settings_notifications_postshare_email">Post share email notifications</string>
    <string name="string_settings_notifications_requestapproval_email">Request approval email notifications</string>
    <string name="string_settings_notifications_youflikupdates_email">Youflik updates email notifications</string>
    <string name="string_settings_notifications_weeklyactivity_email">Weekly activity log email notifications</string>
    <string name="string_settings_notifications_promotionsoffer_email">Promotional offers email notifications</string>

    <!-- strings for Youflik fragment_settings_change_password -->
    <string name="string_settings_change_password_currentpassword">Current Password</string>
    <string name="string_settings_change_password_newpassword">New Password</string>
    <string name="string_settings_change_password_retypepassword">Retype Password</string>

    <!-- strings for Youflik fragment_settings_notifications.xml -->
    <string name="string_settings_notifications_vibration">Vibration</string>
    <string name="string_settings_notifications_ringtone">RingTone</string>

    <!-- strings for Youflik dialog_share.xml -->
    <string name="string_dialog_share_write_something">Write Somethin....</string>

    <!-- strings for Youflik chat_new_message.xml -->
    <string name="string_chat_new_message_to_hint"> type a name,email or number......</string>

    <!-- strings for Youflik group_settings.xml -->
    <string name="string_group_settings_title">Group Settings</string>
    <string name="strings_group_status">Group Status</string>
    <string name="string_leave_group">Leave Group</string>
    <string name="string_people_in_group">People in this group</string>
    <string name="string_save">SAVE</string>
    <string name="string_cancel">CANCEL</string>
    <string name="string_all">All</string>
    <string name="string_To">To :</string>
    <string name="string_start">Start</string>
    <string name="string_friends">Friends</string>
    <string name="string_female">Female</string>
    <string name="string_male">Male</string>
    <string name="string_share">Share</string>
    <string name="string_logout">Logout</string>
    <string name="string_viewprofile">ViewProfile</string>
    <string name="string_new_message">New Message</string>
    <string name="string_recents">Recents</string>
    <string name="string_AllPeople">All People</string>
    <string name="string_submit">Submit</string>
    <string name="string_emailorusername">Email or Username</string>

    <!-- strings for Youflik timefeed_custom_dialog.xml -->
    <string name="string_timefeed_addcomment">Add a comment...</string>
    <string name="string_timefeed_commenttitle">Comments</string>
    <string name="string_timefeed_no_comments">No Comments</string>

    <!-- status update -->
    <string name="writepost">Post Something</string>
    <string name="post">Post</string>
    <string name="phone">Gallery Videos</string>
    <string name="computer">Gallery Photos</string>
    <string name="gamepad">Gamepad</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="loc">Location</string>
    <string name="email">EMail</string>

    <!-- strings for hide a post -->
    <string name="string_hide_post">Hide</string>
    <string name="string_hide_post_offensive">Offensive</string>
    <string name="string_hide_post_harassment">Harassment</string>
    <string name="string_hide_post_spam">Spam</string>

    <!-- strings for Youflik forgotPassword.xml -->
    <string name="string_forgotPassword">Forgot Password</string>

    <!-- strings for Youflik share -->
    <string name="string_share_write_something">Write Something..</string>

    <!-- atrings for listing comments,like and share photo and video -->
    <string name="string_likes">Likes</string>
    <string name="string_noLikesPhoto">No likes found for this photo</string>
    <string name="string_noSharesPhoto">No Shares found for this photo</string>
    <string name="string_noCommentPhoto">No Comments found for this photo</string>
    <string name="string_noLikesVideo">No likes found for this video</string>
    <string name="string_noSharesVideo">No Shares found for this video</string>
    <string name="string_noCommentVideo">No Comments found for this video</string>
    <string name="string_noMessage">No Message</string>
    <string name="string_noMessageLoad">No more Messages to load</string>
    <string name="string_addSomething">Add Something</string>
    <!-- status update privacy array -->
    <string-array name="privacy_array">
        <item>Public</item>
        <item>Friends of Friends</item>
        <item>Friends</item>
        <item>Custom</item>
    </string-array>

</resources>