<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/fragment_settings_change_password_current"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/string_settings_change_password_currentpassword"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/fragment_settings_change_password_new"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/string_settings_change_password_newpassword"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="#000000" />

        <requestFocus />

        <EditText
            android:id="@+id/fragment_settings_change_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/string_settings_change_password_retypepassword"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            android:gravity="center" >

            <Button
                android:id="@+id/fragment_settings_change_password_save"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/string_settings_change_password"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <!--
                 <Button
                android:id="@+id/fragment_settings_change_password_cancel"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/round_button_grey"
                android:text="@string/string_cancel"
                android:textColor="@android:color/white"
                android:textSize="17">
            -->
        </LinearLayout>
    </LinearLayout>

</LinearLayout>