<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/fragment_timefeed_list_comment_title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/black"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fragment_timefeed_listcomment_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_timefeed_commenttitle"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            android:textStyle="bold" >
        </TextView>

        <ImageView
            android:id="@+id/fragment_timefeed_listcomment_dialog_imageclose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/close_w" />
    </LinearLayout>

    <ListView
        android:id="@+id/fragment_timefeed_listcomment_dialog_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_weight="1" >
    </ListView>

    <TextView
        android:id="@+id/fragment_timefeed_listcomment_dialog_nocomments"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/string_timefeed_no_comments"
        android:textSize="18sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/grayborder"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/fragment_timefeed_listcomment_add_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/fragment_timefeed_listcomment_dialog_addComment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#ffffff"
                android:hint="@string/string_timefeed_addcomment"
                android:inputType="text"
                android:paddingBottom="4dp"
                android:paddingLeft="7dp"
                android:paddingTop="4dp"
                android:textSize="16sp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_timefeed_listcomment_post_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="4"
            android:background="#ffffff" >

            <Button
                android:id="@+id/fragment_timefeed_listcomment_dialog_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#989898"
                android:text="@string/post"
                android:textColor="#ffffff"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>