<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/fragment_settings_notifications_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/string_settings_notifications"
            android:textSize="17sp"
            android:textStyle="bold" >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/fragment_settings_notifications_vibration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_settings_notifications_vibration"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <ToggleButton 
                android:id="@+id/fragment_settings_notifications_vibration_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>h

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/fragment_settings_notifications_ringtone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_settings_notifications_ringtone"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <ToggleButton 
                android:id="@+id/fragment_settings_notifications_ringtone_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
                   
        </LinearLayout>

     </LinearLayout>

</ScrollView>